--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -11,6 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/image_vertical_guide_line"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3" />
+
         <ImageView
             android:id="@+id/movie_image"
             android:layout_width="0dp"
@@ -18,7 +25,7 @@
             android:layout_margin="@dimen/margin"
             android:src="@drawable/placeholder"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_min="?android:attr/listPreferredItemHeight"
+            app:layout_constraintEnd_toStartOf="@id/image_vertical_guide_line"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_default="percent"
@@ -26,14 +33,17 @@
 
         <TextView
             android:id="@+id/movie_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin"
+            android:gravity="start"
+            android:maxLines="2"
             android:text="@string/loading"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/primaryColor"
             app:layout_constraintBottom_toTopOf="@id/movie_release_year"
-            app:layout_constraintStart_toEndOf="@id/movie_image"
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/image_vertical_guide_line"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -43,7 +53,7 @@
             android:layout_margin="@dimen/margin"
             android:text="@string/loading"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintStart_toEndOf="@+id/movie_image"
+            app:layout_constraintStart_toEndOf="@+id/image_vertical_guide_line"
             app:layout_constraintTop_toBottomOf="@id/movie_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
