--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -26,7 +26,8 @@
             android:id="@+id/movie_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin"
+            android:padding="@dimen/margin"
+            android:textColor="@color/primaryColor"
             android:maxLines="1"
             android:text="title"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -38,7 +39,7 @@
             android:id="@+id/movie_release_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin"
+            android:padding="@dimen/margin"
             android:maxLines="1"
             android:text="year"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
@@ -50,7 +51,8 @@
             android:id="@+id/movie_overview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin"
+            android:padding="@dimen/margin"
+            app:layout_constraintEnd_toEndOf="parent"
 
             android:text="overview"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
